test/lf/src/failing/SimpleFederated.lf
target uC {
  platform: RIOT
}


reactor X {
  reaction(startup) {=
    printf("Hello from LF!\n");
  =}
}

reactor R {
  reaction(startup) {=
    printf("Hello from LF!\n");
  =}
  x = new X()
}

federated reactor {
  r1 = new R()
  r2 = new R()
}